--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,17 +2,17 @@
 
 <div class="container" style="margin-top: 2%; background-color: #f1f1f1; padding: 2% 0% 2% 0%; width: 60%;">
   <nav class=" navbar navbar-expand-lg navbar-light " style="padding: 2% 0% 5% 8%; height: 60px; ">
-    <a class="navbar-brand" href="#" style="color: maroon; font-size: 35px; font-weight: 400;">AppChat</a>
+    <a class="navbar-brand" routerLink="/" style="color: maroon; font-size: 35px; font-weight: 400;">AppChat</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="/profiles">Add profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="/posts">Add post</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
