--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/profiles">Add profile</a>
+          <a class="nav-link" href="/profiles">profiles</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/posts">Add post</a>
@@ -26,9 +26,15 @@
             <a class="dropdown-item" href="#">Another action</a>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
-        </li>
+        </li>     
       </ul>
     </div>
+      <ul class="nav navbar-nav navbar-right" style="padding-right: 10%;">
+        <li><a href="/auth/register" class="connexion" >SignUp</a></li>
+        <li><a href="/auth/login" class="connexion" >Login</a></li>
+      </ul>
   </nav>
   <router-outlet></router-outlet>
 </div>
+
+
