--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,7 +14,7 @@
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="text" [(ngModel)]="userName" [ngModelOptions]="{standalone: true}" class="form-control" placeholder="Your Name" />
+                        <input type="text" [(ngModel)]="firstName" [ngModelOptions]="{standalone: true}" class="form-control" placeholder="Your Name" />
                       </div>
                     </div>
   
