--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,32 @@
+
+  <div class="container" style="margin-top: 3%; width: 90%; font-size: 13px; font-weight: 300;">
+    <table class="table">
+      <thead class="table-dark">
+        <tr>
+          <th scope="col">First Name</th>
+          <th scope="col">Last Name</th>
+          <th scope="col">Birth Date</th>
+          <th scope="col">Gender</th>
+          <th scope="col">Role</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let p of profiles">
+          <td>{{p.firstName}}</td>
+          <td>{{p.lastName}}</td>
+          <td>{{p.birthDate}}</td>
+          <td>{{p.gender}}</td>
+          <td>{{p.role}}</td>
+          <td>
+            <button type="button" class="updateBtn" (click)="updateProfile(p)" style="border: 0;">Edit</button>
+            <button type="button" class="deleteteBtn" (click)="deleteProfile(p)" style="margin-left: 5%; border: 0;">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
 <section class="container" style="width: 70%; margin-top: 5%;">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -7,7 +36,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-10 order-2 order-lg-1">
   
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Add profile</p>
+                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">profiles</p>
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
@@ -31,7 +60,7 @@
                     </div>
   
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="button" (click)="btnAddProfile()" class="btn btn-dark" style="width: 50%;">Register</button>
+                      <button type="button" class="btn btn-dark" style="width: 50%;">Register</button>
                     </div>              
                 </div>
               </div>
@@ -41,26 +70,6 @@
       </div>
     </div>
   </section>
-
-  
-  <div class="container" style="margin-top: 10%; width: 90%; font-size: 13px; font-weight: 200;">
-    <table class="table">
-      <thead class="table-dark">
-        <tr>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
-          <th scope="col">Birth Date</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
     
     
     
