--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -20,7 +20,7 @@
           <td>{{p.role}}</td>
           <td>
             <button type="button" class="updateBtn" (click)="updateProfile(p)" style="border: 0;">Edit</button>
-            <button type="button" class="deleteteBtn" (click)="deleteProfile(p)" style="margin-left: 5%; border: 0;">Delete</button>
+            <button type="button" class="deleteteBtn" (click)="deleteProfile(p.id)" style="margin-left: 5%; border: 0;">Delete</button>
           </td>
         </tr>
       </tbody>
@@ -37,11 +37,18 @@
                 <div class="col-md-10 order-2 order-lg-1">
   
                   <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">profiles</p>
+
+                  <div class="d-flex flex-row align-items-center mb-4">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <div class="form-outline flex-fill mb-0">
+                      <input type="text" [(ngModel)]="id" disabled="true" class="form-control" placeholder="Identifiant" />
+                    </div>
+                  </div>
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="text" [(ngModel)]="first_name" class="form-control" placeholder="Your Name" />
+                        <input type="text" [(ngModel)]="first_name" disabled="true" class="form-control" placeholder="Your Name" />
                       </div>
                     </div>
   
@@ -58,9 +65,23 @@
                         <input type="date" [(ngModel)]="birth_date" class="form-control" placeholder="Birth Date" />
                       </div>
                     </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input type="text" [(ngModel)]="gender" class="form-control" placeholder="Gender" />
+                      </div>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input type="text" [(ngModel)]="role" class="form-control" placeholder="Role" />
+                      </div>
+                    </div>
   
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="button" class="btn btn-dark" style="width: 50%;">Register</button>
+                      <button type="button" class="btn btn-dark" (click)="valideModifications()" style="width: 50%;">Register</button>
                     </div>              
                 </div>
               </div>
