--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,4 @@
-
-  <div class="container" style="margin-top: 3%; width: 90%; font-size: 13px; font-weight: 300;">
+ <div class="container" style="margin-top: 3%; width: 90%; font-size: 13px; font-weight: 300;">
     <table class="table">
       <thead class="table-dark">
         <tr>
@@ -20,7 +19,7 @@
           <td>{{p.role}}</td>
           <td>
             <button type="button" class="updateBtn" (click)="updateProfile(p)" style="border: 0;">Edit</button>
-            <button type="button" class="deleteteBtn" (click)="deleteProfile(p.id)" style="margin-left: 5%; border: 0;">Delete</button>
+            <button type="button" class="deleteteBtn" (click)="deleteProfile(p)" style="margin-left: 5%; border: 0;">Delete</button>
           </td>
         </tr>
       </tbody>
