--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,54 @@
-<!-- <app-profile></app-profile> -->
+<header class="p-3 mb-3 border-bottom">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+      </a>
 
-<div class="container" style="margin-top: 2%; background-color: #f1f1f1; padding: 2% 0% 2% 0%; width: 60%;">
-  <nav class=" navbar navbar-expand-lg navbar-light " style="padding: 2% 0% 5% 8%; height: 60px; ">
-    <a class="navbar-brand" routerLink="/" style="color: maroon; font-size: 35px; font-weight: 400;">AppChat</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/profiles">profiles</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/posts">Add post</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown link
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>     
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href="/profiles" class="nav-link px-2 link-dark">Profiles</a></li>
+        <li><a href="/posts" class="nav-link px-2 link-dark">Posts</a></li>
+        <li><a href="/comments" class="nav-link px-2 link-dark">comments</a></li>
       </ul>
+
+        <label class="label" >Omar Ali</label>
+
+      <div class="dropdown text-end">
+        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="../../assets/img/profilePic.png" alt="mdo" width="32" height="32" class="rounded-circle">
+        </a>
+        <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+          <li><a class="dropdown-item" href="#">New project...</a></li>
+          <li><a class="dropdown-item" href="#">Settings</a></li>
+          <li><a class="dropdown-item" href="#">Profile</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="#">Sign out</a></li>
+        </ul>
+      </div>
     </div>
-      <ul class="nav navbar-nav navbar-right" style="padding-right: 10%;">
-        <li><a href="/auth/register" class="connexion" >SignUp</a></li>
-        <li><a href="/auth/login" class="connexion" >Login</a></li>
-      </ul>
-  </nav>
-  <router-outlet></router-outlet>
-</div>
+  </div>
+</header>
 
+ <div class="container" style="margin-top: 5%; width: 60%;">
+  <router-outlet></router-outlet>
+</div> 
+
+
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <p class="col-md-4 mb-0 text-muted">© 2022 ChatApp</p>
+
+  <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+    <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+  </a>
+
+  <ul class="nav col-md-4 justify-content-end">
+    <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+    <li class="nav-item"><a href="/profiles" class="nav-link px-2 text-muted">Profiles</a></li>
+    <li class="nav-item"><a href="/posts" class="nav-link px-2 text-muted">Posts</a></li>
+    <li class="nav-item"><a href="/comments" class="nav-link px-2 text-muted">comments</a></li>
+  </ul>
+</footer>
+
+<script src="/docs/5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
