--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,15 +1,15 @@
-<section class="vh-100 container" style="width: 70%; margin-top: -15%;">
+<section class="vh-100 login-form">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-lg-12 col-xl-11">
-          <div class="card text-black" style="border-radius: 25px;">
-            <div class="card-body p-md-5">
+          <div class="card text-black" >
+            <div class="card-body ">
               <div class="row justify-content-center">
                 <div class="col-md-10 order-2 order-lg-1">
   
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign in</p>
+                  <p class="text-center h1 fw-bold mb-5 mx-1 mt-4">Sign in</p>
   
-                  <form class="mx-1 mx-md-4">
+                  <form class="mx-1">
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
@@ -27,6 +27,13 @@
   
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                       <button type="button" (click)="btnLoginUser()" class="btn btn-dark" style="width: 50%;">Conexion</button>
+                    </div>
+
+                    <div class="d-flex flex-row mb-4 text-center">
+                      <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0 register" >
+                        Vous n’avez pas de compte ?<a href="/auth/register" id="btnSignUp"> Inscrivez-vous</a>
+                      </div>
                     </div>
   
                   </form>
